templates/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: awesome-front
spec:
  selector:
    app: awesome-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
