templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awesome-app
spec:
  selector:
    app: awesome-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
