templates/deploy_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesomeapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: awesome-app.stud.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awesome-app
                port:
                  number: 8000
